feat: consolidate admin settings
